<resources>
    <string name="app_name">MyShop</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">forgot password?</string>
    <string name="register"><ub>Register</ub></string>
    <string name="terms_conditions">I Agree To The <u>Terms &amp; Conditions </u></string>
    <string name="err_first_name">Please Enter First Name </string>
    <string name="err_last_name">Please Enter Last Name</string>
    <string name="err_email">Please Enter your Email Id</string>
    <string name="err_password">Your Password can\'t be empty</string>
    <string name="err_password_not_equal_confirm_pass">Password Mismatch</string>
    <string name="msg_thanks_registering">You have been Registered </string>
    <string name="err_agree_tandc">Please agree to the Terms and Conditions</string>
    <string name="invalid_email">Invalid email id</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="login_successful">Welcome!</string>
    <string name="tv_for_password">FORGOT PASSWORD?</string>
    <string name="submit">SUBMIT</string>
    <string name="registered_successfully">You are registered successfully!</string>
    <string name="your_profile">COMPLETE PROFILE</string>
    <string name="save">SAVE</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage . You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_enter_mobile_no">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile was updated successfully.</string>
    <!--<string name="title_activity_dashboard">DashboardActivity</string> -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_action">Settings</string>
    <string name="addresses">Addresses</string>
    <string name="edit">EDIT</string>
    <string name="logout">LOGOUT</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="action_add_product">Add Product</string>
    <string name="err_msg_enter_product_title">Enter product title.</string>
    <string name="err_msg_enter_product_price">Enter product price</string>
    <string name="err_msg_enter_product_desc">Enter product description.</string>
    <string name="err_msg_enter_product_quantity">Enter product quantity.</string>
    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="product_uploaded_successfully">Product uploaded successfully!</string>
    <string name="products_not_found">No products added yet.</string>
    <string name="dashboard_item_not_found">No items found!</string>
    <string name="deleting">deleting...</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="product_data_update_success">Product data updated successfully!</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="item_added_to_cart">Item was added to the cart.</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="my_cart">MY CART</string>
    <string name="cart_is_empty">No item found in cart.</string>
    <string name="checkout">CHECKOUT</string>
    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="item_remove_success">Item removed successfully.</string>

    <string name="msg_for_available_stock">Available stock is %1$s!. You can\'t add more than stock quantity.</string>
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbl_add_address">Add Address</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin code</string>
    <string name="additional_note">Additional note</string>
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phn_no">Please enter the phone number.</string>
    <string name="err_msg_please_enter_address">Please enter the complete address.</string>
    <string name="err_msg_please_enter_pincode">PLease enter the pincode.</string>
    <string name="address_uploaded_successfully">Address uploaded successfully.</string>
    <string name="other_details">Add other details</string>
    <string name="err_please_enter_other_details">Please enter other details.</string>
    <string name="edit_product_details">edit product details</string>

    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="select_address">Select Address</string>
    <string name="msg_address_successfully_updated">Your address was updated successfully.</string>
    <string name="checkout_lbl_product_items">Product items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="lbl_payment_mode">Payment mode</string>
    <string name="lbl_cash_on_delivery">Cash on Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_placed_yet">No orders placed yet!</string>


</resources>