<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".ui.activities.CheckoutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_checkout_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/app_background">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/margin_mini"
            android:paddingEnd="0dp"
            android:text="@string/checkout"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_checkout_activity"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.myshop.utils.MSPTextView
                android:id="@+id/tv_product_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mini"
                android:layout_marginTop="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_mini"
                android:layout_marginBottom="@dimen/margin_mini"
                android:paddingTop="@dimen/margin_micro_plus"
                android:paddingBottom="@dimen/margin_micro_plus"
                android:text="@string/checkout_lbl_product_items"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart_list_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_items" />

            <com.example.myshop.utils.MSPTextView
                android:id="@+id/tv_selected_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_cart_list_items"
                android:layout_marginStart="@dimen/margin_mini"
                android:layout_marginTop="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_mini"
                android:layout_marginBottom="@dimen/margin_mini"
                android:paddingTop="@dimen/margin_micro_plus"
                android:paddingBottom="@dimen/margin_micro_plus"
                android:text="@string/checkout_lbl_selected_address"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/ll_checkout_address_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_selected_address"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/margin_mini">

                <com.example.myshop.utils.MSPTextView
                    android:id="@+id/tv_checkout_address_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_micro_plus"
                    android:paddingBottom="@dimen/margin_micro_plus"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Home" />

                <com.example.myshop.utils.MSPTextViewBold
                    android:id="@+id/tv_checkout_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp"
                    tools:text="Krishna Rana" />

                <com.example.myshop.utils.MSPTextView
                    android:id="@+id/tv_checkout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_mini"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    tools:text="XYZ" />

                <com.example.myshop.utils.MSPTextView
                    android:id="@+id/tv_checkout_additional_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_micro_plus"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    tools:text="XYZ" />

                <com.example.myshop.utils.MSPTextView
                    android:id="@+id/tv_checkout_other_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_micro_plus"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    tools:text="XYZ" />

                <com.example.myshop.utils.MSPTextView
                    android:id="@+id/tv_checkout_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_mini"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    tools:text="+91 8377993745" />
            </LinearLayout>

            <com.example.myshop.utils.MSPTextView
                android:id="@+id/tv_items_receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_checkout_address_details"
                android:layout_marginStart="@dimen/margin_mini"
                android:layout_marginTop="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_mini"
                android:layout_marginBottom="@dimen/margin_mini"
                android:paddingTop="@dimen/margin_micro_plus"
                android:paddingBottom="@dimen/margin_micro_plus"
                android:text="@string/checkout_lbl_items_receipt"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_items_receipt"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/margin_mini">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.myshop.utils.MSPTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_subtotal"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                    <com.example.myshop.utils.MSPTextView
                        android:id="@+id/tv_checkout_sub_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp"
                        tools:text="Rs.100" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.myshop.utils.MSPTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_shipping_charge"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                    <com.example.myshop.utils.MSPTextView
                        android:id="@+id/tv_checkout_shipping_charge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rs.10.0"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.myshop.utils.MSPTextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_total_amount"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                    <com.example.myshop.utils.MSPTextViewBold
                        android:id="@+id/tv_checkout_total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp"
                        tools:text="Rs.110" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_checkout_place_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/margin_micro_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_micro_plus"
            android:orientation="horizontal">

            <com.example.myshop.utils.MSPTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_payment_mode"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp" />

            <com.example.myshop.utils.MSPTextViewBold
                android:id="@+id/tv_payment_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_cash_on_delivery"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp" />
        </LinearLayout>

        <com.example.myshop.utils.MSPButton
            android:id="@+id/btn_place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/margin_micro_plus"
            android:paddingBottom="@dimen/margin_micro_plus"
            android:text="@string/btn_lbl_place_order"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</RelativeLayout>