<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddEditAddressActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_add_edit_address"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/app_background">
        <com.example.myshop.utils.MSPTextViewBold
            android:id="@+id/tv_toolbar_add_edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_address"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_edit_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_mini"
                android:layout_marginTop="@dimen/margin_large"
                android:hint="@string/full_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.example.myshop.utils.MSPEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_full_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_mini"
                android:layout_marginTop="@dimen/margin_large"
                android:hint="@string/phone_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_full_name">

                <com.example.myshop.utils.MSPEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_phone_number"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_mini"
                android:layout_marginTop="@dimen/margin_large"
                android:hint="@string/address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_phone_number">

                <com.example.myshop.utils.MSPEditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:id="@+id/et_address"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pin_code"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_mini"
                android:layout_marginTop="@dimen/margin_large"
                android:hint="@string/pin_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_address">

                <com.example.myshop.utils.MSPEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_pin_code"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_additional_note"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_mini"
                android:layout_marginTop="@dimen/margin_large"
                android:hint="@string/additional_note"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_pin_code">

                <com.example.myshop.utils.MSPEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_additional_note"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_address_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_mini"
                app:layout_constraintTop_toBottomOf="@+id/til_additional_note"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">
                <com.example.myshop.utils.MSPRadioButton
                    android:id="@+id/rb_home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_micro"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:text="HOME"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:button="@null"
                    android:checked="true"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    />
                <com.example.myshop.utils.MSPRadioButton
                    android:id="@+id/rb_office"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:text="OFFICE"
                    android:button="@null"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/margin_micro"
                    android:layout_weight="1"
                    android:checked="false"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    />
                <com.example.myshop.utils.MSPRadioButton
                    android:id="@+id/rb_OTHER"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:text="OTHER"
                    android:button="@null"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/margin_micro"
                    android:layout_weight="1"
                    android:checked="false"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector" />
            </RadioGroup>
            <com.example.myshop.utils.MSPButton
                android:id="@+id/btn_submit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mini"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_mini"
                android:background="@drawable/button_background"
                android:text="@string/submit"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_address_type" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>